# NannyEye-Wifi-Camera

./: gradle.properties  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/drawable/: ads_icon.xml  folder.xml  google_ad_icon.xml  gridview.xml  home.xml  install_bg.xml  local_card.xml  locationon.xml  rightarrow.xml  round_bg.xml  round_img.xml  setting_icon.xml  smartphone.xml  videocam.xml
app/src/main/res/layout/: admob_native.xml  admob_native1.xml  admob_nativefull.xml  admob_samall_native.xml  adview_listitem.xml  fb_native.xml  fb_samall_native_banner.xml  local_appopen.xml  local_banner_ad.xml  local_inter_ad.xml  local_native_ad.xml  local_small_native_ad.xml  qureka_appopen.xml  qureka_banner_ad.xml  qureka_inter_ad.xml  qureka_native_ad.xml  qureka_small_native_ad.xml
app/src/main/res/raw/: wifi_camera_lottie.json
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-gu/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+103 files in other folders)
